[package]
name                    = "yelp"
version                 = "0.1.0"
edition                 = "2021"

[dependencies]
deadpool-postgres       = "0.14"
prost                   = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-postgres          = "0.7"
tonic                   = "0.12"
tonic-reflection        = "0.12"



[build-dependencies]
tonic-build             = "0.12"